fixed the layout bug with the sidedrawer!

--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -1,14 +1,19 @@
 .SideDrawer{
-    background-color: white;
+    position: fixed;
+    color:green;
     width:280px;
     max-width: 70%;
     height: 100%;
     left: 0;
     top: 0;
-    z-index:200;
+    z-index: 200;
     padding: 32px 16px;
     box-sizing: border-box;
     transition: transform 0.3s ease-out;
+}
+
+.Menu{
+    background-color: white;
 }
 
 .Open {
